--- a/extremeworld/src/main/resources/templates/layout/footer.html
+++ b/extremeworld/src/main/resources/templates/layout/footer.html
@@ -10,31 +10,22 @@
                 <h4 class="ui inverted header">Group 1</h4>
                 <div class="ui inverted link list">
                     <a href="#" class="item">Link One</a>
-                    <a href="#" class="item">Link Two</a>
-                    <a href="#" class="item">Link Three</a>
-                    <a href="#" class="item">Link Four</a>
                 </div>
             </div>
             <div class="three wide column">
                 <h4 class="ui inverted header">Group 2</h4>
                 <div class="ui inverted link list">
                     <a href="#" class="item">Link One</a>
-                    <a href="#" class="item">Link Two</a>
-                    <a href="#" class="item">Link Three</a>
-                    <a href="#" class="item">Link Four</a>
                 </div>
             </div>
             <div class="three wide column">
                 <h4 class="ui inverted header">Group 3</h4>
                 <div class="ui inverted link list">
                     <a href="#" class="item">Link One</a>
-                    <a href="#" class="item">Link Two</a>
-                    <a href="#" class="item">Link Three</a>
-                    <a href="#" class="item">Link Four</a>
                 </div>
             </div>
             <div class="seven wide column">
-                <h4 class="ui inverted header">Footer Header</h4>
+                <h4 class="ui inverted header">SKATEBOARD GROUP</h4>
                 <p>Extra space for a call to action inside the footer that could help re-engage users.</p>
             </div>
         </div>
