--- a/extremeworld/src/main/resources/templates/layout/header.html
+++ b/extremeworld/src/main/resources/templates/layout/header.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
         <title>Title</title>
+
+        <link rel="stylesheet" type="text/css" th:href="@{/semantic/components/reset.css}"/>
+        <link rel="stylesheet" type="text/css" th:href="@{/semantic/components/site.css}"/>
+
+        <link rel="stylesheet" type="text/css" th:href="@{/semantic/components/container.css}"/>
+        <link rel="stylesheet" type="text/css" th:href="@{/semantic/components/grid.css}"/>
+        <link rel="stylesheet" type="text/css" th:href="@{/semantic/components/header.css}"/>
+        <link rel="stylesheet" type="text/css" th:href="@{/semantic/components/image.css}"/>
+        <link rel="stylesheet" type="text/css" th:href="@{/semantic/components/menu.css}"/>
+        <link rel="stylesheet" type="text/css" th:href="@{/semantic/components/button.css}"/>
+
+
+        <link rel="stylesheet" type="text/css" th:href="@{/semantic/components/divider.css}"/>
+        <link rel="stylesheet" type="text/css" th:href="@{/semantic/components/list.css}"/>
+        <link rel="stylesheet" type="text/css" th:href="@{/semantic/components/segment.css}"/>
+        <link rel="stylesheet" type="text/css" th:href="@{/semantic/components/dropdown.css}"/>
+        <link rel="stylesheet" type="text/css" th:href="@{/semantic/components/icon.css}"/>
+
+        <script src="//cdn.bootcss.com/jquery/2.2.3/jquery.min.js"></script>
+        <script src="//cdn.bootcss.com/jquery/2.2.3/jquery.slim.min.js"></script>
+
     </head>
     <body>
         <div class="ui fixed inverted menu">
             <div class="ui container">
                 <a href="#" class="header item">
                     <img class="logo" src="assets/images/logo.png"/>
-                    SKATEBOARD GROUP
+                    滑板圈
                 </a>
                 <a href="#" class="item">Home</a>
                 <div class="ui simple dropdown item">
