--- a/extremeworld/src/main/resources/templates/layout/header.html
+++ b/extremeworld/src/main/resources/templates/layout/header.html
@@ -22,6 +22,8 @@
         <link rel="stylesheet" type="text/css" th:href="@{/semantic/components/dropdown.css}"/>
         <link rel="stylesheet" type="text/css" th:href="@{/semantic/components/icon.css}"/>
 
+        <link rel="stylesheet" type="text/css" th:href="@{/css/default.css}"/>
+
         <script src="//cdn.bootcss.com/jquery/2.2.3/jquery.min.js"></script>
         <script src="//cdn.bootcss.com/jquery/2.2.3/jquery.slim.min.js"></script>
 
