--- a/extremeworld/src/main/resources/templates/invite/download3.html
+++ b/extremeworld/src/main/resources/templates/invite/download3.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
-    <title>Title</title>
-
+    <title th:text="邀请好友"></title>
     <link rel="stylesheet" type="text/css" th:href="@{/semantic/components/reset.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/semantic/components/site.css}"/>
 
@@ -28,15 +27,41 @@
     <script src="//cdn.bootcss.com/jquery/2.2.3/jquery.min.js"></script>
     <script src="//cdn.bootcss.com/jquery/2.2.3/jquery.slim.min.js"></script>
 
+    <style>
+        body{left: 50%;top:50%; background-color: #2E2A31;}
+        .whiteText{color: #F3EBEB;}
+    </style>
 </head>
 <body>
-<div class="ui fixed inverted menu">
-    <div class="ui container">
-        <a href="#" class="header item">
-            滑板圈APP--原创视频与专业教学汇聚地
-        </a>
+<div class="ui main text container">
+    <h2 class="tagline text-center whiteText">点击下载APK或跳转到iTunes</h2>
+    <div class="row">
+        <div id="button_download" class="fluid ui red button">点击下载</div>
     </div>
 </div>
 
+<script  th:inline="javascript">
+
+    $(document).ready(function() {
+        $("#button_download").click(function(){
+            console.log("todo join");
+            self.location=[[${appVersion.apkUrl}]];
+        });
+    });
+
+    var btn = document.getElementById('btnDownload');
+    var isIOS = /(iPhone|iPad|iPod|iOS)/i.test(navigator.userAgent);
+    if(isIOS) {
+        $("#button_download").attr("href",'https://itunes.apple.com/cn/app/posterlabs-stylish-collage/id875654777?ls=1');
+        $("#button_download").text("点击进入iTunes下载")
+    }else {
+        $("#button_download").attr("href",[[${appVersion.apkUrl}]]);
+    }
+
+    document.addEventListener('WeixinJSBridgeReady', function onBridgeReady() {
+        btn.href = 'http://a.app.qq.com/o/simple.jsp?pkgname=com.yumfee.skate';
+    });
+
+</script>
 </body>
 </html>
